# di_fx

./: Makefile  README.md  pyproject.toml  uber_fx_comparison.md
.github/workflows/: ci.yml
docs/: best_practices.md  event_loop_native_di.md  framework_integrations.md  rust_integration_benefits.md  troubleshooting_guide.md
examples/: async_integration.py  basic_usage.py  builtin_services_example.py  complete_features.py  named_parameters_example.py  validation_example.py
src/di_fx/: __init__.py  annotate.py  app.py  app_orchestrator.py  builtin_service_manager.py  component.py  component_processor.py  component_processor_manager.py  dependency_resolver.py  dotgraph.py  error_handler.py  invokable_executor.py  invoke.py  lifecycle.py  lifecycle_manager.py  module.py  named.py  options.py  provide.py  shutdowner.py  state_manager.py  supply.py  validation.py  validation_manager.py
tests/: __init__.py  conftest.py  test_annotate.py  test_builtin_services.py  test_invoke.py  test_lifecycle.py  test_module.py  test_named.py  test_options.py  test_validation.py
